[gd_scene load_steps=4 format=3 uid="uid://cmi4732hcy4kb"]

[ext_resource type="Texture2D" uid="uid://dxinwo1mygttw" path="res://art/tileset.png" id="1_qre0a"]
[ext_resource type="Script" path="res://code/box.gd" id="2_yt8u5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0vm4o"]
size = Vector2(48, 48)

[node name="Box" type="Node2D"]
scale = Vector2(1.3, 1.3)
script = ExtResource("2_yt8u5")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(5.5, 5.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2.86102e-06)
shape = SubResource("RectangleShape2D_0vm4o")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(5.5, 5.5)
texture = ExtResource("1_qre0a")
region_enabled = true
region_rect = Rect2(0, 0, 48, 48.1334)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
